tests/fixtures/compile_errors/duplicate_arg_in_contract_method.fe
contract Foo:
    pub def bar(foo: u8, foo:u8):
        pass
